# nlp-text-reconstruction

./: LICENSE  README.md  pyproject.toml
notebooks and csv's/: Basic Evaluation(1C).ipynb  Evaluation(2.1).ipynb  Evaluation(2.2).ipynb  External Library Pipelines(1B).ipynb  Naive Solution(1A).ipynb  pipeline_outputs.csv  rule_based_outputs.csv  similarity_results.csv
